--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-click==8.0.1
-spacy==3.2.0
-torch==2.0.0
-torchvision==0.15.0
-beautifulsoup4==4.9.3
-json5==0.9.5
-pyyaml==5.4.1
+click
+spacy
+torch
+torchvision
+beautifulsoup4
+json5
+pyyaml
 Pillow
