--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,58 @@
-click
-spacy
-torch
-torchvision
-beautifulsoup4
-json5
-pandas
-pyyaml
-Pillow
-pinecone-client
-python-dotenv
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+beautifulsoup4==4.12.2
+blis==0.7.9
+catalogue==2.0.8
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+confection==0.0.4
+cymem==2.0.7
+dnspython==2.3.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
+filelock==3.12.0
+frozenlist==1.3.3
+idna==3.4
+Jinja2==3.1.2
+json5==0.9.11
+langcodes==3.3.0
+loguru==0.7.0
+MarkupSafe==2.1.2
+mpmath==1.3.0
+multidict==6.0.4
+murmurhash==1.0.9
+networkx==3.1
+numpy==1.24.2
+openai==0.27.4
+packaging==23.1
+pandas==2.0.0
+pathy==0.10.1
+Pillow==9.5.0
+pinecone-client==2.2.1
+preshed==3.0.8
+pydantic==1.10.7
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3
+PyYAML==6.0
+requests==2.28.2
+six==1.16.0
+smart-open==6.3.0
+soupsieve==2.4.1
+spacy==3.5.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+srsly==2.4.6
+sympy==1.11.1
+thinc==8.1.9
+torch==2.0.0
+torchvision==0.15.1
+tqdm==4.65.0
+typer==0.7.0
+typing_extensions==4.5.0
+tzdata==2023.3
+urllib3==1.26.15
+wasabi==1.1.1
+yarl==1.9.2
