--- a/requirements.txt
+++ b/requirements.txt
@@ -2,57 +2,44 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
-beautifulsoup4==4.12.2
-blis==0.7.9
-catalogue==2.0.8
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
-confection==0.0.4
-cymem==2.0.7
+contourpy==1.0.7
+cycler==0.11.0
 dnspython==2.3.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
-filelock==3.12.0
+et-xmlfile==1.1.0
+fonttools==4.39.3
 frozenlist==1.3.3
 idna==3.4
-Jinja2==3.1.2
-json5==0.9.11
-langcodes==3.3.0
+joblib==1.2.0
+kiwisolver==1.4.4
 loguru==0.7.0
-MarkupSafe==2.1.2
-mpmath==1.3.0
+matplotlib==3.7.1
 multidict==6.0.4
-murmurhash==1.0.9
-networkx==3.1
-numpy==1.24.2
-openai==0.27.4
+numpy==1.24.3
+openai==0.27.6
+openpyxl==3.1.2
 packaging==23.1
-pandas==2.0.0
-pathy==0.10.1
+pandas==2.0.1
+pandas-stubs==2.0.1.230501
 Pillow==9.5.0
 pinecone-client==2.2.1
-preshed==3.0.8
-pydantic==1.10.7
+plotly==5.14.1
+pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
 PyYAML==6.0
-requests==2.28.2
+requests==2.30.0
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
-smart-open==6.3.0
-soupsieve==2.4.1
-spacy==3.5.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.4
-srsly==2.4.6
-sympy==1.11.1
-thinc==8.1.9
-torch==2.0.0
-torchvision==0.15.1
+tenacity==8.2.2
+threadpoolctl==3.1.0
 tqdm==4.65.0
-typer==0.7.0
+types-pytz==2023.3.0.0
 typing_extensions==4.5.0
 tzdata==2023.3
-urllib3==1.26.15
-wasabi==1.1.1
+urllib3==2.0.2
 yarl==1.9.2
