--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "refiner"
-version = "0.0.1"
+version = "0.1.0"
 authors = [
   { name="Alex Daro", email="gmx2267@gmail.com" },
 ]
@@ -8,15 +8,15 @@ description = "API for creating OpenAI embeddings, storing them in Pinecone, and
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
-  "click==8.1.3",
-  "matplotlib==3.7.1",  
-  "openai==0.27.6",  
-  "pandas==2.0.1",  
-  "pinecone-client==2.2.1",
-  "plotly==5.14.1",
-  "python-dotenv==1.0.0",
-  "scipy==1.10.1",
-  "scikit-learn==1.2.2"
+  "click",
+  "matplotlib",
+  "openai",
+  "pandas",
+  "pinecone-client",
+  "plotly",
+  "python-dotenv",
+  "scipy",
+  "scikit-learn"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
